--- a/Linder/css/main.css
+++ b/Linder/css/main.css
@@ -77,14 +77,10 @@ hr.light-100 {
     background-color: #be004e;
 }
 
-.buttons .nav-link:nth-child(2) .icon {
-    color: white;
-    background-color: #4977b8;
-}
 
 .buttons .icon-text {
     position: absolute;
-    left: 25px;
+    left: 20px;
     z-index: 0;
     width: 50px;
     margin: 3px;
@@ -136,22 +132,41 @@ hr.light-100 {
     box-shadow: 2px 2px 20px grey;
 }
 
-#stackOne{
+.groupStack{
+  position: relative;
+}
 
+#stackOne{
+  position: relative;
+  z-index: auto;
 }
 
 #stackTwo{
     position: absolute;
-    z-index: auto;
+    z-index: -1;
+    top: -1rem;
+    left: 1rem;
+
 }
 
 #stackThree{
-    position: absolute;
+  position: absolute;
     z-index: -2;
+    top: -2rem;
+    left: 2rem;
 
 }
 
 .controls{
+  margin-top:2%;
+  
+}
 
-
+textarea{
+    overflow: hidden;
+    border: none;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    resize: none;
 }
